# dask-sql

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  build.rs  conda.txt  conda.yaml  conftest.py  context.py  failures.txt  index.html  next.config.js  package-lock.json  package.json  postcss.config.js  pre-commit.sh  pyproject.toml  pytest.ini  rustfmt.toml  script_to_test.py  setup.cfg  setup.py  test.py  versioneer.py
.cargo/: config.toml
.github/: CODEOWNERS  cluster-upstream.yml  cluster.yml  dependabot.yml  docker-compose.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-request.md  feature_request.md  submit-question.md
.github/workflows/: build.yml  conda.yml  datafusion-sync.yml  deploy.yml  docker.yml  nightly.yml  release.yml  rust.yml  style.yml  stylecheck.yml  test-dev.yml  test-upstream.yml  test.yml  update-gpuci.yml
continuous_integration/: environment-3.10-dev.yaml  environment-3.10-gpu-dev.yaml  environment-3.10-jdk11-dev.yaml  environment-3.10-jdk8-dev.yaml  environment-3.10.yaml  environment-3.11.yaml  environment-3.12.yaml  environment-3.7-dev.yaml  environment-3.7-jdk11-dev.yaml  environment-3.7-jdk8-dev.yaml  environment-3.7.yaml  environment-3.8-dev.yaml  environment-3.8-gpu-dev.yaml  environment-3.8-jdk11-dev.yaml  environment-3.8-jdk8-dev.yaml  environment-3.8.yaml  environment-3.9-dev.yaml  environment-3.9-gpu-dev.yaml  environment-3.9-jdk11-dev.yaml  environment-3.9-jdk8-dev.yaml  environment-3.9.yaml
continuous_integration/cluster/: environment.yml  stable.yml  upstream.yml
continuous_integration/docker/: conda.txt  main.dockerfile
continuous_integration/gpuci/: axis.yaml  build.sh  environment-3.10.yaml  environment-3.11.yaml  environment-3.8.yaml  environment-3.9.yaml  environment.yaml
continuous_integration/recipe/: build.sh  conda_build_config.yaml  meta.yaml  run_test.py
continuous_integration/scripts/: startup_script.py
dask_planner/: .classpath  Cargo.toml  pyproject.toml  setup.py  test-upstream.toml  update-dependencies.sh
dask_planner/.cargo/: config.toml
dask_planner/.github/workflows/: CI.yml
dask_planner/dask_planner/: __init__.py
dask_planner/dask_planner/python/: __init__.py
dask_planner/src/: catalog.rs  dialect.rs  error.rs  errors.rs  expression.rs  functions.rs  lib.rs  parser.rs  sql.rs
dask_planner/src/sql/: column.rs  exceptions.rs  function.rs  logical.rs  optimizer.rs  parser_utils.rs  preoptimizer.rs  schema.rs  statement.rs  table.rs  types.rs
dask_planner/src/sql/logical/: aggregate.rs  alter_schema.rs  alter_table.rs  analyze_table.rs  create_catalog_schema.rs  create_experiment.rs  create_memory_table.rs  create_model.rs  create_table.rs  create_view.rs  cross_join.rs  describe_model.rs  distinct.rs  drop_model.rs  drop_schema.rs  drop_table.rs  empty_relation.rs  explain.rs  export_model.rs  filter.rs  join.rs  limit.rs  offset.rs  predict_model.rs  projection.rs  repartition_by.rs  show_columns.rs  show_models.rs  show_schema.rs  show_schemas.rs  show_tables.rs  sort.rs  subquery_alias.rs  table_scan.rs  union.rs  use_schema.rs  utils.rs  values.rs  window.rs
dask_planner/src/sql/optimizer/: dynamic_partition_pruning.rs  elim.rs  eliminate_agg_distinct.rs  eliminate_double_distinct.rs  filter_columns_post_join.rs  filter_null_join_keys.rs  filter_push_down.rs  join_reorder.rs  type_coercion.rs
dask_planner/src/sql/optimizer/simplify_expressions/: expr_simplifier.rs  mod.rs  simplify_exprs.rs  utils.rs
dask_planner/src/sql/rules/: mod.rs  type_coercion.rs
dask_planner/src/sql/types/: rel_data_type.rs  rel_data_type_field.rs
dask_sql/: .datacontainer.py.swp  __init__.py  _compat.py  _version.py  cmd.py  config.py  context.py  datacontainer.py  input_utils.py  java.py  mappings.py  sql-schema.yaml  sql.yaml  utils.py
dask_sql/input_utils/: __init__.py  base.py  convert.py  dask.py  hive.py  intake.py  location.py  pandas.py  pandaslike.py  sqlalchemy.py
dask_sql/integrations/: dbapi.py  fugue.py  ipython.py  sqlalchemy.py
dask_sql/physical/: ral.py  rex.py
dask_sql/server/: app.py  handler.py  messages.py  presto_jdbc.py  responses.py
dask_sql/testing/: utils.py
datafusion_planner/: Cargo.toml
datafusion_planner/src/: lib.rs
dev-tests/: report.html
docker/: cloud.dockerfile  conda.txt  main.dockerfile  startup_script.py
docs/: 404.html  conf.py  environment.yaml  environment.yml  index.html  index.rst  requirements-docs.txt
docs/pages/: api.rst  cmd.rst  configuration.rst  custom.rst  data_input.rst  how_does_it_work.rst  installation.rst  machine_learning.rst  quickstart.rst  server.rst  sql.rst
docs/source/: api.rst  best_practices.rst  conf.py  configuration.rst  data_input.rst  fugue.rst  how_does_it_work.rst  index.rst  installation.rst  machine_learning.rst  quickstart.rst  server.rst  sql.rst
notebooks/: Custom Functions.ipynb  Feature Overview.ipynb  FugueSQL.ipynb  Introduction.ipynb
planner/: pom.xml
planner/application/: pom.xml
pytest-html/: test-results.html
scripts/: startup_script.py
src/: dialect.rs  expression.rs  lib.rs  parser.rs  sql.rs
src/pages/: _app.tsx  index.tsx
src/sql/: column.rs  function.rs  logical.rs  optimizer.rs  preoptimizer.rs  schema.rs  statement.rs  table.rs  types.rs
src/styles/: index.css
tests/: utils.py
tests/integration/: fixtures.py  test_alter.py  test_analyze.py  test_cmd.py  test_compatibility.py  test_complex.py  test_create.py  test_cve_fix.py  test_dask.py  test_dask_cudf.py  test_distributeby.py  test_except.py  test_explain.py  test_filter.py  test_fugue.py  test_function.py  test_groupby.py  test_hive.py  test_intake.py  test_jdbc.py  test_join.py  test_model.py  test_over.py  test_postgres.py  test_pql_model.py  test_rex.py  test_sample.py  test_schema.py  test_select.py  test_server.py  test_show.py  test_sort.py  test_sqlite.py  test_statistics.py  test_substrait.py  test_union.py  test_values.py
tests/unit/: test_call.py  test_config.py  (+8 more)
(+256 files in other folders)
