[package]
name = "dask-sql"
repository = "https://github.com/dask-contrib/dask-sql"
version = "2023.6.0"
description = "Bindings for DataFusion used by Dask-SQL"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.65"

[lib]
name = "dask_sql"
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.71"
datafusion-python = "27.0.0"
env_logger = "0.10"
log = "^0.4"
pyo3 = { version = "0.19.0", features = ["extension-module", "abi3", "abi3-py38"] }
pyo3-log = "0.8.2"

[build-dependencies]
pyo3-build-config = "0.19.1"
