[package]
name = "dask-sql"
repository = "https://github.com/dask-contrib/dask-sql"
version = "2023.11.0-rc1"
description = "Bindings for DataFusion used by Dask-SQL"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.65"
include = ["/src", "/dask_sql", "/LICENSE.txt", "pyproject.toml", "Cargo.toml", "Cargo.lock"]

[dependencies]
async-trait = "0.1.74"
datafusion-python = { git = "https://github.com/apache/arrow-datafusion-python.git", ref = "da6c183" }
env_logger = "0.10"
log = "^0.4"
pyo3 = { version = "0.19.2", features = ["extension-module", "abi3", "abi3-py38"] }
pyo3-log = "0.9.0"

[build-dependencies]
pyo3-build-config = "0.20.0"

[lib]
name = "dask_sql"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
