[package]
name = "dask_planner"
repository = "https://github.com/dask-contrib/dask-sql"
version = "0.1.0"
description = "Bindings for DataFusion used by Dask-SQL"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.62"

[dependencies]
async-trait = "0.1.68"
datafusion = "18.0.0"
datafusion-common = "18.0.0"
datafusion-expr = "18.0.0"
datafusion-optimizer = "18.0.0"
datafusion-sql = "18.0.0"
env_logger = "0.10"
log = "^0.4"
mimalloc = { version = "*", default-features = false }
parking_lot = "0.12"
pyo3 = { version = "0.18.2", features = ["extension-module", "abi3", "abi3-py38"] }
pyo3-log = "0.8.1"
rand = "0.8"
tokio = { version = "1.27", features = ["macros", "rt", "rt-multi-thread", "sync", "fs", "parking_lot"] }
uuid = { version = "1.3", features = ["v4"] }

[lib]
crate-type = ["cdylib"]
