[package]
name = "dask_planner"
repository = "https://github.com/dask-contrib/dask-sql"
version = "0.1.0"
description = "Bindings for DataFusion used by Dask-SQL"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
async-trait = "0.1.70"
datafusion-python = { git = "https://github.com/apache/arrow-datafusion-python.git", rev = "9493638" }
env_logger = "0.10"
log = "^0.4"
pyo3 = { version = "0.18.3", features = ["extension-module", "abi3", "abi3-py38"] }
pyo3-log = "0.8.2"

[build-dependencies]
pyo3-build-config = "0.19.0"

[lib]
crate-type = ["cdylib"]
